--- a/promotion.html
+++ b/promotion.html
@@ -41,11 +41,11 @@
             pers <br></h4>
     </dIv>
 </div>
-    <h5>ISTANBUL 3* STANDARD - TURKISH AIRLINES DEPART CASA 8J-7N</h5><br>
+    <h5 class="place">ISTANBUL 3* STANDARD - TURKISH AIRLINES DEPART CASA 8J-7N</h5><br>
     <div class="maps" >
     <h6> ISTANBUL </h6>
     <img src="Icon feather-map-pin.png" alt="map" class="map" height="20px" width="5%"></div>
-    <h5><br><br>Départ le : 2020-01-11<br>
+    <h5 class="depart"><br><br>Départ le : 2020-01-11<br>
         Retour le : 2020-01-18</h5>
       </div>  
 <div class="promo2">
@@ -56,11 +56,11 @@
             pers<br></h4>
 
     </dIv></div>
-    <h5> Relais Ras El Maa </h5><br>
+    <h5 class="place"> Relais Ras El Maa </h5><br>
     <div class="maps" >
     <h6> IFRANE </h6>
     <img src="Icon feather-map-pin.png" alt="map" class="map" height="20px" width="5%"></div>
-    <h5><br><br>Formules :<br>
+    <h5 class="depart"><br><br>Formules :<br>
                 Hôtel : 3* </h5>
 </div>
    </div>
@@ -73,11 +73,11 @@
             pers</h4>
     </div></div>
 
-    <h5>ROYAL MIRAGE HOTEL FES</h5><br>
+    <h5 class="place">ROYAL MIRAGE HOTEL FES</h5><br>
     <div class="maps" >
     <h6> IFRANE </h6>
     <img src="Icon feather-map-pin.png" alt="map" class="map" height="20px" width="5%" ></div>
-    <h5><br><br>Formules : petit dejuner<br>
+    <h5 class="depart"><br><br>Formules : petit dejuner<br>
                 Hôtel : 5*</h5>
 </div>
 <div class="promo4">
@@ -89,11 +89,11 @@
             
     </div></div>
     
-    <h5>Le Nil des Pharaons</h5><br>
-    <div class="maps" >
+    <h5 class="place">Le Nil des Pharaons</h5><br>
+    <div  class="maps" >
     <h6> Egypte </h6>
     <img src="Icon feather-map-pin.png" alt="map" class="map" height="20px" width="5%"></div>
-    <h5><br><br>Départ le : 2020-04-01<br>
+    <h5 class="depart"><br><br>Départ le : 2020-04-01<br>
                 Retour le : 2020-04-07</h5>
 </div>
 </div>
